--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -1,5 +1,20 @@
+# Set true color
+set-option -sa terminal-overrides ",xterm*:Tc"
+set -g mouse on
+
+# Set prefix
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
+
+# Set window and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 
-run '~/.config/tmux/plugins/tpm/tpm'
+run '~/dotfiles/tmux/plugins/tpm/tpm'
