--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -3,15 +3,20 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
 # Set prefix
-unbind C-b
 set -g prefix C-Space
+set -g prefix2 C-b
 bind C-Space send-prefix
+bind C-b send-prefix -2
 
 # Set window and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+
+# Open panes in current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
