--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "zsh/ohmyzsh"]
 	path = zsh/ohmyzsh
 	url = https://github.com/BenniGras/ohmyzsh
+[submodule "neovim/nvim"]
+	path = neovim/nvim
+	url = https://github.com/BenniGras/NvChad
