Ghostty and Zed added

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -22,4 +22,4 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 
-run '~/dotfiles/tmux/plugins/tpm/tpm'
+run '~/.dotfiles/tmux/plugins/tpm/tpm'
